# flexiv_amr_sdk

./: CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: public_sdk_install_test.yml
cmake/: Findasio.cmake  FlexivInstallLibrary.cmake  flexiv_amr_sdk-config.cmake.in
example/: CMakeLists.txt  seer_audio_example.cpp  seer_basic_example.cpp  seer_motion_example.cpp  seer_navigation_example.cpp
example_py/: seer_audio_example.py  seer_basic_example.py  seer_motion_example.py  seer_navigation_example.py
include/flexiv/amr/: amr.h  exceptions.h
lib/: dummy.cpp  flexiv_amr.win_amd64.lib.sha256  libflexiv_amr.aarch64-linux-gnu.a.sha256  libflexiv_amr.arm64-darwin.a.sha256  libflexiv_amr.x86_64-linux-gnu.a.sha256
python/: README.md  wheels.sha256.txt
